--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^5.2.2",
     "@react-google-maps/api": "^2.20.8",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.95.3",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
